...
                .padding()
            }
            .navigationTitle("选择内置图片".appLocalized)
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button("完成".appLocalized) {
                        dismiss()
                    }
                }

                ToolbarItem(placement: .topBarLeading) {
                    Button("清除选择".appLocalized) {
...
